--- a/autharch_sharc/templates/editor/includes/physloc_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/physloc_inline_form.html
@@ -11,6 +11,7 @@
   </div>
   <div class="fieldset-body expand inline-deletable">
     {% render_form_delete_widget form.DELETE %}
+    {% render_field form.id %}
     {% render_field form.physloc %}
   </div>
 </fieldset>
