--- a/autharch_sharc/templates/editor/stream_field_page.html
+++ b/autharch_sharc/templates/editor/stream_field_page.html
@@ -1,23 +1,25 @@
-{% extends "base.html" %}
 {% load wagtailcore_tags %}
 
-{% block main %}
-  {% block page_header %}
-    {{ page.title }}
-  {% endblock page_header %}
-  {% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>{{ page.title }}</title>
+</head>
+<body>
+<div class="resources-page">
+  <h1 class="page-title">Resources</h1>
+  <h2>{{ page.title }}</h2>
+  <div class="two-column-50-50">
+    {% for block in page.body %}
+      {% if block.block_type == 'heading' %}
+        <h2>{{ block.value }}</h2>
+      {% else %}
+        {% include_block block %}
+      {% endif %}
+    {% endfor %}
+  </div>
 
-    <div>
-                <div>
-                    <h3>Section title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.”</p>
-
-                    <ol>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                    </ol>
-                    <p><button class="button-secondary small pdf mgn-right">Download PDF</button>PDF title</p>
-                </div>
-            </div>
-    {{ page.body }}
-  {% endblock content %}
-{% endblock main %}
+</div>
+</body>
+</html>
